feat(ui): dynamic sea level coastlines, planetary datum contour Z=0, and contrast relief hillshading in tabs 2 and 3